# python-pubsub

./: .coveragerc  .release-please-manifest.json  .repo-metadata.json  CHANGELOG.md  CONTRIBUTING.rst  README.rst  UPGRADING.md  constraints-3.14.txt  long-tasks.py  noxfile.py  owlbot.py  publisher_trace_provider.py  pyproject.toml  pytest.ini  setup.py  sonar-project.properties  synth.metadata  synth.py  user-code-pub.py  user-code-sub.py
.github/: .OwlBot.lock.yaml  CODEOWNERS  blunderbuss.yml  sync-repo-settings.yaml
.github/workflows/: docs.yml  sonar.yml  unittest.yml
.kokoro/: presubmit-against-pubsublite-samples.sh  requirements.txt  test-samples-impl.sh  test-samples.sh  trampoline_v2.sh
.kokoro/docker/docs/: Dockerfile  requirements.txt
.kokoro/presubmit/: presubmit.cfg
.kokoro/samples/python3.14/: common.cfg
.kokoro/samples/python3.7/: common.cfg
.kokoro/samples/python3.8/: common.cfg
.librarian/: config.yaml  state.yaml
.librarian/generator-input/: noxfile.py
docs/: conf.py  index.rst
docs/_templates/: layout.html
docs/publisher/: index.rst
docs/pubsub/publisher/: index.rst
docs/subscriber/: index.rst
google/cloud/: __init__.py  py.typed
google/cloud/pubsub_v1/: futures.py  opentelemetry_tracing.py  types.py
google/cloud/pubsub_v1/gapic/: publisher_client.py  subscriber_client.py
google/cloud/pubsub_v1/open_telemetry/: context_propagation.py  publish_message_wrapper.py  subscribe_message_wrapper.py  subscribe_opentelemetry.py
google/cloud/pubsub_v1/opentelemetry/: context_propagation.py  publish_message_wrapper.py  subscribe_spans_data.py
google/cloud/pubsub_v1/proto/: pubsub_pb2.py  pubsub_pb2_grpc.py
google/cloud/pubsub_v1/publisher/: client.py  exceptions.py  flow_controller.py  futures.py  message_wrapper.py
google/cloud/pubsub_v1/subscriber/: README.rst  client.py  exceptions.py  futures.py  message.py  scheduler.py  subscriber_client_config.py
google/pubsub/: __init__.py
google/pubsub_v1/: __init__.py
google/pubsub_v1/services/publisher/: client.py  (+2 more)
google/pubsub_v1/types/: __init__.py  pubsub.py  schema.py
owl-bot-staging/v1/: .coveragerc  README.rst  noxfile.py  setup.py
owl-bot-staging/v1/docs/: conf.py  index.rst
samples/generated_samples/: pubsub_generated_pubsub_v1_publisher_delete_topic_async.py  pubsub_generated_pubsub_v1_publisher_delete_topic_sync.py  pubsub_generated_pubsub_v1_publisher_detach_subscription_async.py  pubsub_generated_pubsub_v1_publisher_detach_subscription_sync.py  pubsub_generated_pubsub_v1_publisher_list_topic_subscriptions_async.py  pubsub_generated_pubsub_v1_publisher_list_topic_subscriptions_sync.py  pubsub_generated_pubsub_v1_publisher_list_topics_async.py  pubsub_generated_pubsub_v1_publisher_list_topics_sync.py  pubsub_generated_pubsub_v1_publisher_publish_async.py  pubsub_generated_pubsub_v1_publisher_update_topic_sync.py  pubsub_generated_pubsub_v1_schema_service_create_schema_async.py  pubsub_generated_pubsub_v1_schema_service_create_schema_sync.py  pubsub_generated_pubsub_v1_schema_service_delete_schema_async.py  pubsub_generated_pubsub_v1_schema_service_delete_schema_sync.py  pubsub_generated_pubsub_v1_schema_service_get_schema_async.py  pubsub_generated_pubsub_v1_schema_service_get_schema_sync.py  pubsub_generated_pubsub_v1_schema_service_list_schemas_async.py  pubsub_generated_pubsub_v1_schema_service_validate_message_async.py  pubsub_generated_pubsub_v1_schema_service_validate_schema_async.py  pubsub_generated_pubsub_v1_subscriber_acknowledge_async.py  pubsub_generated_pubsub_v1_subscriber_create_snapshot_async.py  pubsub_generated_pubsub_v1_subscriber_create_subscription_async.py  pubsub_generated_pubsub_v1_subscriber_delete_subscription_async.py  pubsub_generated_pubsub_v1_subscriber_delete_subscription_sync.py  pubsub_generated_pubsub_v1_subscriber_get_snapshot_sync.py  pubsub_generated_pubsub_v1_subscriber_get_subscription_sync.py  pubsub_generated_pubsub_v1_subscriber_list_snapshots_sync.py  pubsub_generated_pubsub_v1_subscriber_list_subscriptions_async.py  pubsub_generated_pubsub_v1_subscriber_modify_ack_deadline_async.py  pubsub_generated_pubsub_v1_subscriber_modify_push_config_sync.py  pubsub_generated_pubsub_v1_subscriber_pull_async.py  pubsub_generated_pubsub_v1_subscriber_seek_async.py  pubsub_generated_pubsub_v1_subscriber_seek_sync.py  pubsub_generated_pubsub_v1_subscriber_streaming_pull_async.py  pubsub_generated_pubsub_v1_subscriber_update_subscription_sync.py  snippet_metadata_google.pubsub.v1.json
samples/snippets/: README.rst  iam.py  iam_test.py  main.py  mypy.ini  noxfile.py  publisher.py  publisher_test.py  requirements-test.txt  requirements.txt  schema.py  schema_test.py  sponge_log.xml -v  sponge_log.xml -v -s  subscriber.py  subscriber_test.py
samples/snippets/quickstart/: pub.py  quickstart_test.py  sub.py
samples/snippets/resources/: us-states.proto
samples/snippets/utilities/: us_states_pb2.py
scripts/: fixup_pubsub_v1_keywords.py
testing/: constraints-3.6.txt  constraints-3.7.txt  constraints-3.8.txt
tests/: system.py
tests/unit/pubsub_v1/: conftest.py  test_futures.py
(+131 files in other folders)
